<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/mnone" android:title="@string/map_none"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/mnormal" android:title="@string/map_normal"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/mhybrid" android:title="@string/map_hybrid"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/msatellite" android:title="@string/map_satellite"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/mterrain" android:title="@string/map_terrain"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
